--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@tiptap/vue-3": "^2.0.0-beta.202",
     "d3": "^7.6.1",
+    "d3-org-chart": "^2.7.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.17",
     "vee-validate": "^4.7.4",
