--- a/frontend/src/stores/.eslintrc
+++ b/frontend/src/stores/.eslintrc
@@ -1,4 +1,9 @@
 {
+        "extensions": [
+          ".js",
+          ".ts",
+          ".vue"
+        ],
   "rules": {
     "import/prefer-default-export": "off"
   }
