Instalar dependência `nice-number`

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "d3": "^7.6.1",
     "d3-org-chart": "^2.7.0",
     "lodash": "^4.17.21",
+    "nice-number": "^1.0.3",
     "pinia": "^2.0.17",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.37",
