--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "@tiptap/vue-3": "^2.0.0-beta.202",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.7.0",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "nice-number": "^1.0.3",
     "pinia": "^2.0.17",
