--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@tiptap/vue-3": "^2.0.0-beta.202",
+    "@vueuse/core": "^10.1.0",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.7.0",
     "dayjs": "^1.11.7",
