--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://homol-smae-api.appcivico.com
+VITE_API_URL=https://homol-smae-api.appcivico.com/api
 FORMULA_JS_URL=https://homol-smae-api.appcivico.com/public/js/formula_parser.v2.js
