feat: Expor erros não tratados apenas em desenvolvimento

--- a/frontend/.env-sample
+++ b/frontend/.env-sample
@@ -11,6 +11,9 @@ FORMULA_JS_URL=
 # habilitar funcionalidades ainda em testes
 VITE_HABILITAR_BETA=false
 
+# expor erros não tratados
+VITE_EXPOR_ERROS=false
+
 # limite de itens selecionáveis
 # pensado para ações destrutivas
 VITE_LIMITE_SELECAO=10
