--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "moduleResolution": "node",
+    "module": "es2020",
     "paths": {
       "@/*": [
         "src/*"
@@ -17,7 +18,10 @@
     "rootDirs": [
       "./src"
     ],
-    "target": "es2020"
+    "target": "es2020",
+    "types": [
+      "vite/client",
+    ]
   },
   "exclude": [
     "node_modules",
