--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@tiptap/vue-3": "^2.0.0-beta.202",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vuepic/vue-datepicker": "^8.8.1",
     "@vueuse/core": "^10.1.0",
     "big.js": "^6.2.1",
@@ -30,7 +31,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-vue": "^9.3.0",
     "less": "^4.1.3",
