fix: Conflito entre TypScript e ESLInt

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,8 +23,14 @@
       "vite/client",
     ]
   },
+  "include": [
+    "vite.config.ts",
+    ".eslintrc.cjs",
+    "src"
+  ],
   "exclude": [
     "node_modules",
-    "build"
+    "build",
+    "./dist"
   ]
 }
