--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "big.js": "^6.2.1",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.7.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.5.0",
     "iframe-resizer": "^4.3.6",
@@ -25,6 +26,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/qs": "^6.9.12",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.53.0",
