Criação do Cadastro de Classificação - Modulo Transferências Voluntarias

--- a/backend-geoloc/Dockerfile
+++ b/backend-geoloc/Dockerfile
@@ -7,8 +7,12 @@ WORKDIR /code
 #
 COPY ./requirements.txt /code/requirements.txt
 
-#
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+#Linhas adicionadas para resolver problema para instalar o GDAL
+RUN apt-get update
+RUN apt-get install -y gdal-bin libgdal-dev g++
+###############################################################
+
+RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 #
 COPY . /code/
