feat: criando esboço componente de envelope

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "nice-number": "^1.0.3",
     "pinia": "^2.0.17",
     "qs": "^6.11.1",
+    "swiper": "^11.1.14",
     "vee-validate": "^4.7.4",
     "vue": "^3.4.15",
     "vue-echarts": "^6.7.2",
