--- a/backend/package.json
+++ b/backend/package.json
@@ -79,8 +79,7 @@
     "swagger-ui-express": "^5.0.1",
     "ts-graphviz": "^1.8.1",
     "uuidv7": "^0.6.3",
-    "winston": "^3.14.2",
-    "xlsx": "file:vendor/xlsx-0.20.3.tgz"
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -123,6 +122,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.6.2",
+    "xlsx": "^0.18.5",
     "yargs": "^17.7.2"
   },
   "prisma": {
