--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,10 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "@back/*": [
+        "../backend/src/*"
+      ],
     },
     "strict": true,
     "strictNullChecks": true,
@@ -23,7 +26,7 @@
     ]
   },
   "include": [
-    "vite.config.ts",
+    "vite.config.*s",
     ".eslintrc.cjs",
     "src"
   ],
