--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,14 +40,22 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-vue": "^9.3.0",
+    "husky": "^9.1.6",
     "less": "^4.1.3",
+    "lint-staged": "^15.2.10",
     "vite": "^5.0.12"
+  },
+  "lint-staged": {
+    "*.{vue,js,jsx,cjs,mjs,ts,tsx}": [
+      "eslint --quiet --fix"
+    ]
   },
   "name": "SMAE - Frontend",
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore",
+    "prepare": "cd .. && husky frontend/.husky",
     "preview": "vite preview --port 4173"
   },
   "type": "module",
