--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,8 @@
     "husky": "^9.1.6",
     "less": "^4.1.3",
     "lint-staged": "^15.2.10",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vitest": "^2.1.4"
   },
   "lint-staged": {
     "*.{vue,js,jsx,cjs,mjs,ts,tsx}": [
@@ -56,7 +57,8 @@
     "dev": "vite",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore",
     "prepare": "cd .. && husky frontend/.husky",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "test": "vitest"
   },
   "type": "module",
   "version": "0.0.0"
